<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".BildirimActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textSize="35sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/my_primary"
        android:text="@string/bildirim_baslik"
        android:id="@+id/bildirim_baslik"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type1"/>
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type2"/>
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type3"/>
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type4"/>
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type5"/>
    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type6"/>
    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/teal_700"
        android:buttonTint="@color/my_secondary"
        android:background="@drawable/checkbox_selector"
        android:text="@string/type7" />
    <Button
        android:id="@+id/kaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/white"
        android:background="@color/my_primary"
        android:text="KAYDET" />




</LinearLayout>